// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/basic/popconfirm/demo/async.md correctly 1`] = `
LoadedCheerio {
  "0": <button
    class="dcloud-btn dcloud-btn-primary"
    type="button"
  >
    <span>
      Open Popconfirm with async logic
    </span>
  </button>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/popconfirm/demo/basic.md correctly 1`] = `
LoadedCheerio {
  "0": <a
    href="#"
  >
    Delete
  </a>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/popconfirm/demo/dynamic-trigger.md correctly 1`] = `
LoadedCheerio {
  "0": <div>
    <a
      href="#"
    >
      Delete a task
    </a>
    <br />
    <br />
    Whether directly execute：
    <button
      aria-checked="true"
      class="dcloud-switch dcloud-switch-checked"
      role="switch"
      type="button"
    >
      <div
        class="dcloud-switch-handle"
      />
      <span
        class="dcloud-switch-inner"
      />
    </button>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/popconfirm/demo/icon.md correctly 1`] = `
LoadedCheerio {
  "0": <a
    href="#"
  >
    Delete
  </a>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/popconfirm/demo/locale.md correctly 1`] = `
LoadedCheerio {
  "0": <a
    href="#"
  >
    Delete
  </a>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/popconfirm/demo/placement.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="demo"
  >
    <div
      style="margin-left:70px;white-space:nowrap"
    >
      <button
        class="dcloud-btn"
        type="button"
      >
        <span>
          TL
        </span>
      </button>
      <button
        class="dcloud-btn"
        type="button"
      >
        <span>
          Top
        </span>
      </button>
      <button
        class="dcloud-btn"
        type="button"
      >
        <span>
          TR
        </span>
      </button>
    </div>
    <div
      style="width:70px;float:left"
    >
      <button
        class="dcloud-btn"
        type="button"
      >
        <span>
          LT
        </span>
      </button>
      <button
        class="dcloud-btn"
        type="button"
      >
        <span>
          Left
        </span>
      </button>
      <button
        class="dcloud-btn"
        type="button"
      >
        <span>
          LB
        </span>
      </button>
    </div>
    <div
      style="width:70px;margin-left:304px"
    >
      <button
        class="dcloud-btn"
        type="button"
      >
        <span>
          RT
        </span>
      </button>
      <button
        class="dcloud-btn"
        type="button"
      >
        <span>
          Right
        </span>
      </button>
      <button
        class="dcloud-btn"
        type="button"
      >
        <span>
          RB
        </span>
      </button>
    </div>
    <div
      style="margin-left:70px;clear:both;white-space:nowrap"
    >
      <button
        class="dcloud-btn"
        type="button"
      >
        <span>
          BL
        </span>
      </button>
      <button
        class="dcloud-btn"
        type="button"
      >
        <span>
          Bottom
        </span>
      </button>
      <button
        class="dcloud-btn"
        type="button"
      >
        <span>
          BR
        </span>
      </button>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/popconfirm/demo/promise.md correctly 1`] = `
LoadedCheerio {
  "0": <button
    class="dcloud-btn dcloud-btn-primary"
    type="button"
  >
    <span>
      Open Popconfirm with Promise
    </span>
  </button>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;
